tests/toylang/neg/001018_mutation.toylang
program a = { if a then sleep else else sleep; } .
